# chim

./: .gitignore  README.md  pyproject.toml
chim/: __init__.py  modinstall.py  server.py  server_legacy.py
chim/esp/: __init__.py  authoring.py  compression.py  edit.py  fields.py  ops.py  papyrus.py  query.py  records.py  safety.py  subrecords.py
chim/save/: __init__.py  analysis.py  ess.py  heap.py
chim/tes3/: __init__.py  analysis.py  bsa.py  container.py  ops.py
docs/: SPEC.md  TOOLS.md  published.md
tests/: conftest.py  test_bsa.py  test_edit.py  test_esplib_backend.py  test_modinstall.py  test_query.py  test_records.py  test_roundtrip.py  test_safety.py  test_savefile.py  test_subrecords.py  test_tes3.py  test_vmad_masters_papyrus.py
tests/fixtures/: make_fixture.py  sample.esp
